改 应用图标与Android杂项

--- a/.gitignore
+++ b/.gitignore
@@ -1,41 +1,33 @@
+*.class
+*.ico
+*.iml
+*.jpeg
+*.jpg
+*.lock
+*.log
+*.png
+*.svg
+*.webp
+.DS_Store
+.flutter-plugins-dependencies
+.metadata
+app.*.map.json
+app.*.symbols
+lib/lang/l.dart
+lib/lang/l_*.dart
+.atom/
+.build/
+.buildlog/
 .dart_tool/
+.history/
 .idea/
-.pub-cache/
 .pub/
+.pub-cache/
 .svn/
-.swiftpm/
 /android/app/debug/
 /android/app/profile/
 /android/app/release/
 /build/
 /coverage/
 /debug_info/
-**/doc/api/
-**/ios/Flutter/.last_build_id
-.atom/
-.build/
-.buildlog/
-.history/
 migrate_working_dir/
-.DS_Store
-.flutter-plugins-dependencies
-.metadata
-app.*.map.json
-app.*.symbols
-ddd.iml
-lib/lang/l.dart
-lib/lang/l_*.dart
-pubspec.lock
-*.class
-*.iml
-*.ipr
-*.iws
-*.log
-*.pyc
-*.swp
-*.png
-*.ico
-*.jpg
-*.jpeg
-*.svg
-**/mipmap-*/ic_launcher.png
